overlays/dev/rucio/patch-grid-certificates.yaml
# Add initContainers to Deployments requring OSG CA certificates installed
# This will result in an initContainer being created before the Rucio daemon container
# This initContainer uses an image that has the most recent CA certs baked in
# Baked in certs are copied to a mounted volume. The initContainer concludes actions.
# Volume that initContainer copied CA certificates into is mounted by the Rucio daemon.
# You've got certs.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-automatix
spec:
  template:
    spec:
      volumes:
       - name: ca-volume-reaper
         secret:
           $patch: delete
         emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-reaper
spec:
  template:
    spec:
      volumes:
       - name: ca-volume
         secret:
           $patch: delete
         emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-rucio-server
spec:
  template:
    spec:
      volumes:
       - name: ca-volume
         secret:
           $patch: delete
         emptyDir: {}
