overlays/dev/rucio/patch-hermesk-image.yaml
# This patches the hermes2 Deployment containers to utilize the 
# image built for a Rubin custom Hermes daemon with Kafka support

apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-hermes
spec:
  template:
    spec:
      containers:
        - name: rucio-daemons
          image: "ghcr.io/lsst-dm/rucio-daemons-hermesk:34.0.0.1"
          volumeMounts:
            - name: proxy-volume
              mountPath: /opt/proxy
      volumes:
        - name: proxy-volume
          secret:
            secretName: usdf-rucio-x509up
