overlays/dev/rucio/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usdf-rucio-server
spec:
  $patch: replace
  rules:
    - host: 'rubin-rucio-dev.slac.stanford.edu'
      http:
        paths:
          - path: /
            backend:
              service:
                name: usdf-rucio-server
                port:
                  number: 443
            pathType: Prefix
